# ollama-router

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
examples/: config.yaml
src/ollama_router/: api.py  backend.py  config.py  main.py  openai.py
tests/: test_api.py  test_config.py  test_openai.py
