[project]
name = "ollama-router"
version = "0.1.0"
description = "Minimal OpenAI-compatible router for prioritized Ollama backends."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
]

[project.scripts]
ollama-router = "ollama_router.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
